<?xml version="1.0"?>
<package format="3">
  <name>sprint3_slo3_6</name>
  <version>0.0.0</version>
  <description>The cylinder detector package for ROS 2</description>
  <maintainer email="Rhys.Darcy@student.uts.edu.au">Rhys</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend> 

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>